# stracciatella-toolset

./: .eslintrc.js  .gitignore  .rules  LICENSE  README.md  craco.config.js  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.erb/: tsconfig.json
.erb/configs/: webpack.config.base.mjs  webpack.config.base.mts  webpack.config.base.ts  webpack.config.eslint.mts  webpack.config.main.dev.mjs  webpack.config.main.dev.mts  webpack.config.main.dev.ts  webpack.config.main.prod.mjs  webpack.config.main.prod.mts  webpack.config.main.prod.ts  webpack.config.preload.dev.mjs  webpack.config.preload.dev.mts  webpack.config.renderer.dev.dll.mjs  webpack.config.renderer.dev.dll.mts  webpack.config.renderer.dev.mjs  webpack.config.renderer.dev.mts  webpack.config.renderer.dev.ts  webpack.config.renderer.prod.mjs  webpack.config.renderer.prod.mts  webpack.config.renderer.prod.ts  webpack.module.renderer.mjs  webpack.module.renderer.mts  webpack.paths.mjs  webpack.paths.mts
.erb/scripts/: check-build-exists.mjs  check-build-exists.mts  check-native-dep.js  check-native-dep.mjs  check-native-dep.mts  check-node-env.mjs  check-node-env.mts  check-port-in-use.mjs  clean.mjs  clean.mts  delete-source-maps.mjs  delete-source-maps.mts  electron-rebuild.mjs  electron-rebuild.mts  ensure-rust-dep.js  ensure-rust-dep.mjs  ensure-rust-dep.mts  link-modules.mjs  link-modules.mts  notarize.mjs  notarize.mts
.github/workflows/: publish.yml  test.yml  workflow.yml
assets/: assets.d.ts  icon.icns
release/app/: package-lock.json  package.json
src/: App.tsx  EditorRoutes.tsx  index.tsx
src-rust/: Cargo.toml
src-rust/src/: cache.rs  config.rs  dirs.rs  lib.rs  state.rs
src-rust/src/invokables/: image.rs  images.rs  json.rs  mod.rs  mods.rs  resources.rs  sounds.rs  toolset.rs  toolset_config.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  main.rs  state.rs
src-tauri/src/invokables/: images.rs  json.rs  mod.rs  mods.rs  resources.rs  sounds.rs  toolset_config.rs
src/__tests__/: setupJestRenderer.ts  vitest.setup.ts
src/__tests__/renderer/: App.test.tsx
src/common/events/: index.ts  toolset.ts
src/common/invokables/: dialogs.ts  images.ts  index.ts  jsons.ts  mods.ts  resources.ts  sounds.ts  toolset.ts
src/components/: Dashboard.tsx  EditorContent.tsx  EditorLayout.css  EditorLayout.tsx  FullSizeLoader.css  FullSizeLoader.tsx  JsonForm.tsx  JsonItemsForm.css  JsonItemsForm.tsx  JsonSchemaForm.tsx  Layout.css  Layout.tsx  OpenMod.tsx  StrategicMap.css  StrategicMap.tsx  StrategicMapForm.tsx  WithOpenMod.css  WithOpenMod.tsx  WithToolsetConfig.css  WithToolsetConfig.tsx
src/components/content/: ItemPreview.tsx  MercPreview.tsx  ResourceSelectorModal.tsx  SoundPreview.tsx  StrategicMap.css  StrategicMap.tsx
src/components/form/: ResourceReferenceWidget.tsx  StringReferenceWidget.tsx
src/hooks/: useImage.tsx  useJsonWithSchema.tsx
src/lib/: invoke.tsx  listDir.tsx  readSound.tsx
src/main/: events.ts  main.ts  menu.ts  preload.ts  rust.ts
src/main/invokables/: dialogs.ts  index.ts  toolset.ts
src/pages/: AmmoTypes.tsx  ArmyCompositions.tsx  ArmyGarrisonGroups.tsx  ArmyGunChoiceExtended.tsx  ArmyGunChoiceNormal.tsx  ArmyPatrolGroups.tsx  Calibres.tsx  Dashboard.tsx  Dealers.tsx  Game.tsx  Imp.tsx  Initialization.css  Initialization.tsx  Items.tsx  LoadingScreens.tsx  LoadingScreensMapping.tsx  Magazines.tsx  MercsMERCListings.tsx  MercsProfileInfo.tsx  MercsRpcSmallFaces.tsx  Music.tsx  Open.css  Open.tsx  ShippingDestinations.tsx  StrategicAIPolicy.tsx  StrategicBloodcatPlacements.tsx  StrategicBloodcatSpawns.tsx  StrategicFactParams.tsx  StrategicMapCacheSectors.tsx  StrategicMapCreatureLairs.tsx  StrategicMapMovementCosts.tsx  StrategicMapNpcPlacements.tsx  StrategicMapSamSites.tsx  StrategicMapSamSitesAirControl.tsx  StrategicMapSecrets.tsx  StrategicMapSectorsDescriptions.tsx  StrategicMapTowns.tsx  StrategicMapTraversibilityRatings.tsx  StrategicMapUndergroundSectors.tsx  StrategicMines.tsx  (+4 more)
src/renderer/: App.css  App.tsx  EditorRoutes.tsx  index.ejs  preload.d.ts
src/renderer/components/: Dashboard.tsx  EditorContent.css  EditorContent.tsx  EditorLayout.tsx  ErrorAlert.tsx  FullSizeDialogLayout.css  FullSizeDialogLayout.tsx  FullSizeLoader.tsx  JsonForm.tsx  JsonItemsForm.tsx  JsonSchemaForm.tsx  MovementCostsForm.tsx  NewMod.tsx  OpenMod.css  OpenMod.tsx  SamSitesAirControlForm.tsx  StrategicMapForm.tsx  TextEditor.tsx  WithOpenMod.tsx  WithToolsetConfig.tsx
src/renderer/hooks/: files.tsx  state.tsx  useAnyFileLoading.tsx  (+35 more)
src/state/: files.tsx  mods.tsx  toolset.tsx
(+60 files in other folders)
