[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
async-fs = "1.5"
async-lock = "2.5"
base64 = "0.13"
directories = "4.0"
futures-lite = "1.2"
image = "0.23"
lazy_static = "1.4"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.11"
stracciatella = { git = "https://github.com/ja2-stracciatella/ja2-stracciatella.git", rev = "9b86961a0f79e1ed05660dc065c2da02d24bd019" }
tauri = { version = "1.0.0", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
